--- a/style.css
+++ b/style.css
@@ -2113,7 +2113,7 @@ body.mouse-inside::before {
 .project-image img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: fill;
     object-position: top; /* <-- ADICIONE ESTA LINHA */
     transition: all var(--transition-medium);
 }
